--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,10 @@ header {
   }
 }
 
+.button-mobile {
+  top: 0;
+  margin-top: 0;
+}
 .submit {
   background-color: #007bff;
   color: white;
@@ -257,9 +261,7 @@ header {
     font-weight: bold;
     color: #222222;
     display: block;
-    top: 109px;
     text-align: left;
-    position: relative;
   }
 }
 
