--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,7 @@ header {
     flex-direction: column;
     gap: 20px;
     padding: 0px;
+    margin-bottom: 58px;
   }
 }
 
@@ -585,6 +586,7 @@ header {
   background-color: #fff;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
   padding: 20px;
+  margin-top: 80px;
 }
 
 .img-YDC {
