--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,9 @@ header {
   .submit {
     padding: 15px 110px;
     border-radius: 4px;
+    display: inline-block;
     max-width: 100%;
+    font-size: 20px;
   }
 }
 
@@ -221,6 +223,7 @@ header {
   .submit {
     padding: 15px 65px;
     border-radius: 10px;
+    font-size: 18px;
   }
 }
 
@@ -587,6 +590,11 @@ header {
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
   padding: 20px;
   margin-top: 80px;
+  text-align: center;
+}
+
+.container {
+  text-align: left;
 }
 
 .img-YDC {
