--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  max-width: 100%;
   height: auto;
   z-index: 1;
 }
@@ -123,7 +123,7 @@ body {
 .logo-mobile-big {
   position: absolute;
   left: 30%;
-  min-width: 313px;
+  max-width: 313px;
   margin-top: 45px;
   margin-bottom: 96px;
   max-width: 100%;
