--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+  width: 352px;
   max-width: 100%;
   height: auto;
   z-index: 1;
@@ -122,8 +123,8 @@ body {
 
 .logo-mobile-big {
   position: absolute;
-  left: 30%;
-  max-width: 313px;
+  left: 20%;
+  width: 313px;
   margin-top: 45px;
   margin-bottom: 96px;
   max-width: 100%;
